--- a/main/main.tex
+++ b/main/main.tex
@@ -479,13 +479,14 @@ Equation \eqref{eq:energy_bessel} now implies that the fraction of energy one ca
   \label{eq:energy_frac_bessel}
 \frac{\int_S \id^2x \abs{E}^2}{\int_{\mathbb{R}^2} \id^2x \abs{E}^2}=\frac{\sum_{n=-\infty}^{\infty} \langle [I_S^nb_n],b_n \rangle}{\sum_{m=-\infty}^{\infty} \langle b_m,b_m \rangle},
 \end{equation}
-Since a scaling of the $b_n$:s will not affect the fraction we can always normalize them so that $\sum_{n=-\infty}^{\infty} \langle b_n,b_n \rangle}=1$, which is equivalent to normalize the EM-field.
+Since a scaling of the $b_n$:s will not affect the fraction we can
+always normalize them so that $\sum_{n=-\infty}^{\infty} \langle b_n, b_n \rangle=1$, which is equivalent to normalize the EM-field.
 Now the maximum of \eqref{eq:energy_frac_bessel} can be proven to be the largest eigenvalue to the family of operators $\{I_n\}$;
 \begin{equation*}
   \begin{aligned}
    & \text{max}_{b_n} \sum_{n=-\infty}^{\infty} \langle [I_S^nb_n],b_n \rangle
-    \leq \sum_{n=-\infty}^{\infty} \text{max}_{b_n}\langle [I_S^nb_n],b_n \rangle}\\
-&\qq*{which since} I_S \qq{is hermitian under the scalar product \ref{eq:in_prod_bessel} 
+    \leq \sum_{n=-\infty}^{\infty} \text{max}_{b_n}\langle [I_S^nb_n],b_n \rangle\\
+&\qq*{which since} I_S \qq{is hermitian under the scalar product \ref{eq:in_prod_bessel}} 
   \end{aligned}
 \end{equation*}
 
