--- a/main/main.tex
+++ b/main/main.tex
@@ -490,7 +490,7 @@ since $I_S$ is hermitian under the scalar product \ref{eq:in_prod_bessel} this i
 \begin{equation*}
   \sum_{n=-\infty}^{\infty}\lambda_n \langle b_n, b_n \rangle \leq \lambda_{\text{max}}\sum_{n=-\infty}^{\infty}\langle b_n, b_n\rangle=\lambda_{\text{max}},
 \end{equation*}
-where $\lambda_n$ denotes the largest eigenvalue of $I_S^n$ and $\lambda$_{max} the largest of these.
+where $\lambda_n$ denotes the largest eigenvalue of $I_S^n$ and $\lambda_{\text{max}}$ the largest of these.
 If we choose the $b_n$:s so that
 \begin{equation*}
   b_n(k)
